[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Count_down.gd" type="Script" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Count_down" type="HBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = 21.0
margin_right = -19.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Second" type="Label" parent="UI/Count_down"]
margin_right = 16.0
margin_bottom = 19.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Colon" type="Label" parent="UI/Count_down"]
margin_left = 20.0
margin_right = 24.0
margin_bottom = 19.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = ":"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Dsecond" type="Label" parent="UI/Count_down"]
margin_left = 28.0
margin_right = 48.0
margin_bottom = 19.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "20"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Unit" type="Label" parent="UI/Count_down"]
margin_left = 52.0
margin_right = 62.0
margin_bottom = 19.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "s"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="UI/Count_down"]
wait_time = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -42.0
margin_right = 126.0
margin_bottom = 146.0

[node name="Win_message" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
margin_right = 252.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Message" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 252.0
margin_bottom = 188.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Space to start"
align = 1

[node name="Game_name" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 186.0
margin_right = 130.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 4 )
text = "10chaSe"

[connection signal="timeout" from="UI/Count_down/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UI/Count_down/Timer" to="UI/Count_down" method="_on_Timer_timeout"]
